--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "dexie": "^4.0.11",
     "firebase": "^11.7.0",
     "framer-motion": "^12.23.12",
+    "html-react-parser": "^5.2.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.1.2"
   },
   "devDependencies": {
