--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "firebase": "^11.7.0",
     "framer-motion": "^12.23.12",
     "html-react-parser": "^5.2.6",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
