--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "dexie": "^4.0.11",
     "firebase": "^11.7.0",
     "framer-motion": "^12.23.12",
     "html-react-parser": "^5.2.6",
+    "lucide-react": "^0.539.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-calendar": "^6.0.0",
