--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
+    "@heroicons/react": "^2.2.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "dexie": "^4.0.11",
     "firebase": "^11.7.0",
     "framer-motion": "^12.23.12",
+    "heroicons": "^2.2.0",
     "html-react-parser": "^5.2.6",
     "lucide-react": "^0.539.0",
     "prop-types": "^15.8.1",
